Add some changes

--- a/login.html
+++ b/login.html
@@ -77,9 +77,11 @@
                 <button type="submit" class="btn btn-primary">Login</button>
             </form>
         </div>
-        <img src="svg/wave2.svg" alt="wave1">
-
     </section>
+
+    <footer>
+        <img src="svg/wave2.svg" alt="wave1">
+    </footer>
 </body>
 
 </html>
