--- a/contacts.html
+++ b/contacts.html
@@ -15,6 +15,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="img/logo.jpg" alt="" width="55">
+                <h2>Leyte Normal University</h2>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
