--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,8 +72,9 @@
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                    <div class="col-sm-10 password-container">
+                        <input type="password" class="form-control" id="password" placeholder="Password">
+                        <span class="toggle-password" onclick="togglePasswordVisibility()">Show</span>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Login</button>
