--- a/link.html
+++ b/link.html
@@ -52,6 +52,9 @@
             </div>
         </div>
     </nav>
+    <section>
+        <img src="svg/wave.svg" alt="wave1">
+    </section>
 </body>
 
 </html>
