Add Some Changes

--- a/login.html
+++ b/login.html
@@ -84,6 +84,9 @@
 
     <footer>
         <img src="svg/wave2.svg" alt="wave1">
+        <p>
+            Copyright Christian Barbosa @2023
+        </p>
     </footer>
 </body>
 
