Add Footer to all pages

--- a/about.html
+++ b/about.html
@@ -55,6 +55,12 @@
     <section>
         <img src="svg/wave.svg" alt="wave1">
     </section>
+    <footer>
+        <img src="svg/wave2.svg" alt="wave1">
+        <p>
+            Copyright Christian Barbosa @2023
+        </p>
+    </footer>
 </body>
 
 </html>
