Add Picture to Index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
     <title>LNU - Transaction</title>
 </head>
 
@@ -54,6 +57,12 @@
     </nav>
     <section>
         <img src="svg/wave.svg" alt="wave1">
+    </section>
+    <section class="index-intro ">
+        <h2>"Empowering Minds, Transforming Futures"</h2>
+        <div class="image-container">
+            <img src="img/student.png" alt="Clamped Image">
+        </div>
     </section>
     <footer>
         <img src="svg/wave2.svg" alt="wave1">
