Adjust lower image

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <h2>"Empowering Minds, Transforming Futures"</h2>
         <div class="image-container">
             <img src="img/student.png" alt="Clamped Image">
+            <img src="img/LNU-ISO.png" alt="Clamped Image">
         </div>
     </section>
     <footer>
