--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
+
+    <link href="img/logo.jpg" rel="icon">
+    <link href="img/logo.jpg" rel="apple-touch-icon">
+
     <title>LNU - Transaction</title>
 </head>
 
