--- a/login.html
+++ b/login.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Kanit:wght@200&display=swap" rel="stylesheet">
+
+    <link href="img/logo.jpg" rel="icon">
+    <link href="img/logo.jpg" rel="apple-touch-icon">
     <title>LNU - Transaction</title>
 </head>
 
