--- a/contacts.html
+++ b/contacts.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script>
+
+    <link href="img/logo.jpg" rel="icon">
+    <link href="img/logo.jpg" rel="apple-touch-icon">
     <title>LNU - Transaction</title>
 </head>
 
