Add some changes

--- a/about.html
+++ b/about.html
@@ -66,7 +66,8 @@
                 <div class="about-section-col">
                     <div class="about">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga provident ea hic, neque amet sequi temporibus iure aliquid placeat inventore. Quae dolores dolore, cum nulla quas ipsum facere maxime, necessitatibus!
+                            Leyte Normal University (also abbreviated as LNU) is a university in the province of Leyte, Philippines. It is mandated to provide higher professional and special instructions for special purposes and to promote research and extension services, advanced
+                            studies, and progressive leadership in education and other related fields. Its campus is situated in Tacloban City.
                         </p>
                         <a href="#">Read More</a>
                     </div>
