--- a/about.html
+++ b/about.html
@@ -60,6 +60,7 @@
     </section>
     <div class="about-section">
         <div class="inner-width">
+            <img src="img/logo.jpg" alt="" width="65">
             <h1>About Us</h1>
             <div class="border"></div>
             <div class="about-section-row">
