--- a/contacts.html
+++ b/contacts.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="style.css">
 
     <link href="img/logo.jpg" rel="icon">
     <link href="img/logo.jpg" rel="apple-touch-icon">
@@ -55,9 +58,38 @@
             </div>
         </div>
     </nav>
+
     <section>
         <img src="svg/wave.svg" alt="wave1">
+        <div class="container">
+            <form>
+                <img src="img/logo.jpg" alt="" width="65">
+
+                <h1>Contact Us</h1>
+                <br>
+                <div class="row mb-3">
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="inputTExt" placeholder="Full Name">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col-sm-10">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="inputMessage" placeholder="Enter a Message">
+                    </div>
+                </div>
+                <button class="btn btn-outline-success" type="submit">
+                    Send <i class="fas fa-paper-plane"></i>
+                </button>
+
+            </form>
+        </div>
     </section>
+
     <footer>
         <img src="svg/wave2.svg" alt="wave1">
         <p>
