Changes Progress bar

--- a/about.html
+++ b/about.html
@@ -76,21 +76,21 @@
                 <div class="about-section-col">
                     <div class="skills">
                         <div class="skill">
-                            <div class="title">Web Develpor</div>
+                            <div class="title">Student Satisfaction</div>
                             <div class="progress">
                                 <div class="progress-bar p1"><span>90%</span></div>
                             </div>
                         </div>
 
                         <div class="skill">
-                            <div class="title">UI Design</div>
+                            <div class="title">Passing Rate</div>
                             <div class="progress">
                                 <div class="progress-bar p2"><span>70%</span></div>
                             </div>
                         </div>
 
                         <div class="skill">
-                            <div class="title">UX Design</div>
+                            <div class="title">Utilities</div>
                             <div class="progress">
                                 <div class="progress-bar p3"><span>50%</span></div>
                             </div>
