Add history in the about us page

--- a/about.html
+++ b/about.html
@@ -67,34 +67,38 @@
                 <div class="about-section-col">
                     <div class="about">
                         <p>
-                            Leyte Normal University (also abbreviated as LNU) is a university in the province of Leyte, Philippines. It is mandated to provide higher professional and special instructions for special purposes and to promote research and extension services, advanced
-                            studies, and progressive leadership in education and other related fields. Its campus is situated in Tacloban City.
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Leyte Normal University (also abbreviated as LNU) is a university in the province of Leyte, Philippines. It is mandated to provide higher professional and special instructions for special purposes and to
+                            promote research and extension services, advanced studies, and progressive leadership in education and other related fields. Its campus is situated in Tacloban City.
                         </p>
                         <a href="#">Read More</a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="about-section">
+        <div class="inner-width">
+            <img src="img/logo.jpg" alt="" width="65"><br>
+            <h1>History of Leyte Normal University</h1>
+            <div class="border"></div>
+            <div class="about-section-row">
                 <div class="about-section-col">
-                    <div class="skills">
-                        <div class="skill">
-                            <div class="title">Student Satisfaction</div>
-                            <div class="progress">
-                                <div class="progress-bar p1"><span>90%</span></div>
-                            </div>
-                        </div>
-
-                        <div class="skill">
-                            <div class="title">Passing Rate</div>
-                            <div class="progress">
-                                <div class="progress-bar p2"><span>70%</span></div>
-                            </div>
-                        </div>
-
-                        <div class="skill">
-                            <div class="title">Utilities</div>
-                            <div class="progress">
-                                <div class="progress-bar p3"><span>50%</span></div>
-                            </div>
-                        </div>
+                    <div class="about">
+                        <p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The history of Leyte Normal University dates back to the pre-war years. It came into being in 1921 as the Provincial Normal School, a mere adjunct of the Leyte High School. It eventually outgrew its base
+                            becoming a two-year collegiate training institution in 1938. It became a degree-granting four-year college complete with a training department in 1952.
+                        </p>
+                        <p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;It was then known as Leyte Normal School. On June 14, 1976, it was converted into the Leyte State College by virtue of Presidential Decree No. 944, signed by then Pres. Ferdinand Marcos. In 1993, the late
+                            Cong. Cirilo Roy Montejo filed House Bill No. 22 in the House of Representatives proposing the conversion of the college into a university.
+                        </p>
+                        <p>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This bill was sponsored by former Sen. Letecia Ramos-Shahani in the Senate. On February 23, 1995, the college was converted into the Leyte Normal University though R.A. 7910. Sometime in April 1996, the
+                            university was proclaimed by the Commission on Higher Education (CHED) as the Center of Excellence for Teacher Education in Region VIII from 1996 to 2001. Then in August 2008, CHED again awarded LNU as Center of Excellence
+                            for Teacher Education from 2008 to 2011.
+                        </p>
+                        <a href="#">Read More</a>
                     </div>
                 </div>
             </div>
