--- a/link.html
+++ b/link.html
@@ -58,6 +58,10 @@
     <section>
         <img src="svg/wave.svg" alt="wave1">
     </section>
+
+    <section>
+        <h1>Ongoing not available..</h1>
+    </section>
     <footer>
         <img src="svg/wave2.svg" alt="wave1">
         <p>
