--- a/article.html
+++ b/article.html
@@ -59,7 +59,7 @@
         <img src="svg/wave.svg" alt="wave1">
     </section>
     <section>
-        <h1>Ongoing not available..</h1>
+        <h1>Ongoing not available.. Coming Soon</h1>
     </section>
     <footer>
         <img src="svg/wave2.svg" alt="wave1">
