Add some content

--- a/article.html
+++ b/article.html
@@ -60,6 +60,9 @@
     </section>
     <section>
         <h1>Ongoing not available.. Coming Soon</h1>
+        <div class="article-container">
+            <h1> LNU this November</h1>
+        </div>
     </section>
     <footer>
         <img src="svg/wave2.svg" alt="wave1">
