Add content to article (Few)

--- a/article.html
+++ b/article.html
@@ -63,6 +63,9 @@
         <h1>Ongoing not available.. Coming Soon</h1>
         <div class="article-container">
             <h1> LNU this November</h1>
+            <article>
+                LNU Inks Collaboration with University Pendidikan Indonesia Leyte Normal University successfully renewed another international collaboration this time with Universitas Pendidikan Indonesia on Student Exchange and Practicum Teaching, last March 4, 2022...
+            </article>
         </div>
     </section>
     <footer>
