--- a/article.html
+++ b/article.html
@@ -66,6 +66,9 @@
             <article>
                 LNU Inks Collaboration with University Pendidikan Indonesia Leyte Normal University successfully renewed another international collaboration this time with Universitas Pendidikan Indonesia on Student Exchange and Practicum Teaching, last March 4, 2022...
             </article>
+            <article>
+                LNU, FIRST SUC TO GET SAFETY SEAL IN TACLOBAN CITY LNU gets safety seal as the first SUC in Tacloban City to be awarded the same by the DILG Tacloban City Safety Seal..
+            </article>
         </div>
     </section>
     <footer>
