Add some content

--- a/article.html
+++ b/article.html
@@ -69,6 +69,9 @@
             <article>
                 LNU, FIRST SUC TO GET SAFETY SEAL IN TACLOBAN CITY LNU gets safety seal as the first SUC in Tacloban City to be awarded the same by the DILG Tacloban City Safety Seal..
             </article>
+            <article>
+                NATIONAL Covid-19 VACCINATION DAYS Proclamation No. 1253 otherwise known as the "BAYANIHAN, BAKUNAHAN NATIONAL Covid-19 VACCINATION DAYS..
+            </article>
         </div>
     </section>
     <footer>
