add some content in this file

--- a/article.html
+++ b/article.html
@@ -72,6 +72,9 @@
             <article>
                 NATIONAL Covid-19 VACCINATION DAYS Proclamation No. 1253 otherwise known as the "BAYANIHAN, BAKUNAHAN NATIONAL Covid-19 VACCINATION DAYS..
             </article>
+            <article>
+                LNU Team Attends High-Level Futures Consortium Workshop The Leyte Normal University, represented by its University President..
+            </article>
         </div>
     </section>
     <footer>
