add some nov content

--- a/article.html
+++ b/article.html
@@ -75,6 +75,9 @@
             <article>
                 LNU Team Attends High-Level Futures Consortium Workshop The Leyte Normal University, represented by its University President..
             </article>
+            <article>
+                BS Bio Sci2019 alumna is 3rd Placer in January 2022 LET BS Bio Sci 2019 alumna is 3rd Placer in January 2022 LET . .
+            </article>
         </div>
     </section>
     <footer>
