--- a/article.html
+++ b/article.html
@@ -81,6 +81,9 @@
             <article>
                 LNU Dayaw Awards 2022 Honors Tradition and Values Leadership Leyte Normal University turning 101 last March 2022 takes pride in. .
             </article>
+            <article>
+                LNU UNDERGRADUATE ADMISSIONS The LNU Undegraduate Admissions For incoming freshmen and transferees Semester 1, Academic Year 2023 – 2024 is now open!
+            </article>
         </div>
     </section>
     <footer>
